5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1662_1390.log
== TEST (2019-04-15 15:04:16) 
-- CODE:
tempo = int(input("minutos consumidos: ")
if: (tempo <=100) 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- ERROR:
File "XXXX", line 2
    if: (tempo <=100) 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:04:29) 
-- CODE:
tempo = int(input("minutos consumidos: ")
if: ( <=100) 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- ERROR:
File "XXXX", line 2
    if: ( <=100) 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:04:44) 
-- CODE:
tempo = int(input("minutos consumidos: ")
if(tempo <=100): 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- ERROR:
File "XXXX", line 2
    if(tempo <=100): 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:04:52) 
-- CODE:
tempo = int(input("minutos consumidos: ")
if(tempo <= 100): 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- ERROR:
File "XXXX", line 2
    if(tempo <= 100): 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:05:21) 
-- CODE:
tempo = int(input("minutos consumidos: ")

if(tempo =< 100): 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- ERROR:
File "XXXX", line 3
    if(tempo =< 100): 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:05:24) 
-- CODE:
tempo = int(input("minutos consumidos: ")

if(tempo < 100): 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- ERROR:
File "XXXX", line 3
    if(tempo < 100): 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:05:39) 
-- CODE:
tempo = int(input("minutos consumidos: ")

if tempo < 100: 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- ERROR:
File "XXXX", line 3
    if tempo < 100: 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:05:45) 
-- CODE:
tempo = int(input("minutos consumidos: ")

if (tempo < 100): 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- ERROR:
File "XXXX", line 3
    if (tempo < 100): 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:06:11) 
-- CODE:
tempo = int(input("minutos consumidos: ")

if (100 <= tempo ): 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- ERROR:
File "XXXX", line 3
    if (100 <= tempo ): 
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:06:59) 
-- CODE:
tempo = int(input("minutos consumidos: "))

if (tempo <= 100): 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- OUTPUT:
(50, 20)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:07:20) 
-- CODE:
tempo = int(input("minutos consumidos: "))

if (tempo <= 100): 
				preco = tempo*1,20
else:
				preco = 25+(tempo*1,40)
print(preco)
				
-- OUTPUT:
(50, 20)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:07:38) 
-- CODE:
tempo = int(input("minutos consumidos: "))

if (tempo <= 100): 
				preco = tempo*1,20
else:
				preco = (25+(tempo*1,40))
print(preco)
				
-- OUTPUT:
(50, 20)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:07:55) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100): 
				preco = tempo*1,20
else:
				preco = (25+(tempo*1,40))
print(preco)
				
-- OUTPUT:
(50.0, 20)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:08:12) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100): 
				preco = tempo*1,20
else:
				preco = (25+ tempo*1,40)
print(preco)
				
-- OUTPUT:
(50.0, 20)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:08:23) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100): 
				preco = tempo*1,20
else:
				preco = (25+ tempo*1,40)
print(preco)
				
-- EXECUTION TIME:
0.300428
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
(50.0, 20)
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:
(145.0, 40)
-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:
(224.0, 40)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:00) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo => 100):preco = tempo*1,20
else:
				preco = (25+ tempo*1,40)

	print(preco)
				
-- ERROR:
File "XXXX", line 3
    if (tempo => 100):preco = tempo*1,20
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:08) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):preco = tempo*1,20
else:
				preco = (25+ tempo*1,40)

	print(preco)
				
-- ERROR:
File "XXXX", line 7
    print(preco)
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:17) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	preco = tempo*1,20
else:
				preco = (25+ tempo*1,40)

	print(preco)
				
-- ERROR:
File "XXXX", line 8
    print(preco)
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:32) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25+ tempo*1,40)

	print(preco)
				
-- ERROR:
File "XXXX", line 8
    print(preco)
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:39) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25+ tempo*1,40)
print(preco)
				
-- OUTPUT:
(50.0, 20)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:10:13) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25+ tempo* 1.40)
print(preco)
				
-- OUTPUT:
(50.0, 20)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:10:25) 
-- CODE:
tempo = int(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25+ tempo* 1.40)
print(preco)
				
-- OUTPUT:
(50, 20)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:10:56) 
-- CODE:
tempo = int(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25+ tempo* 1.40)
print(round(preco, 2)
				
-- ERROR:
File "XXXX", line 9
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:11:01) 
-- CODE:
tempo = int(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25+ tempo* 1.40)
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:11:06) 
-- CODE:
tempo = int(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25+ tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.168946
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:11:15) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25+ tempo* 1.40)
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:11:19) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25+ tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.199483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:11:29) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25+ tempo* 1.40)
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:12:20) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:22) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.180313
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:22) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.13467
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:23) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.231532
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:23) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.205188
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
193.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:
303.6
-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:24) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.443345
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:24) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.269025
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1662/1390/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:25) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.382062
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
193.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:

-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:25) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.503259
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
193.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:
193.0
-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:25) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.282661
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
303.6
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:

-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:25) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.472163
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1662/1390/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:26) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.692496
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:26) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.591293
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1662/1390/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:26) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.566632
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1662/1390/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:26) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.669258
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1662/1390/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:27) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.609057
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
193.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:
303.6
-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:27) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.527771
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
193.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:

-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:27) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.397833
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
303.6
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:

-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:
303.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:12:34) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.170921
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:12:34) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:13:18) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.157376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:13:19) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.222587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:13:20) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:13:20) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.189774
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
303.6
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:

-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:
193.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:13:20) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.159415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:13:45) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- EXECUTION TIME:
0.139455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/1390/main.py", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:13:58) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:23) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + tempo* 1.40)
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:42) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (25 + (tempo * 1.40))
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:15:14) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = (tempo * 1.40) + 25
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:17) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = 25 + tempo*1.40
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:09) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = tempo*40 + 25
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:13) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1,20
else:
				preco = tempo*40 + 25
print(round(preco, 2))
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(preco, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:36) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1.20
else:
				preco = tempo*1.40 + 25
print(round(preco, 2))
				
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:40) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1.20
else:
				preco = tempo*1.40 + 25
print(round(preco, 2))
				
-- OUTPUT:
60.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:17:44) 
-- CODE:
tempo = float(input("minutos consumidos: "))

if (tempo <= 100):
	         preco = tempo*1.20
else:
				preco = tempo*1.40 + 25
print(round(preco, 2))
				
-- EXECUTION TIME:
0.167494
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:
193.0
-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:
303.6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
